--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "express": "~4.0.0",
         "rethinkdb": "^2.2.0",
         "body-parser": "~1.0.1",
-         "debug": "2.2.0"
+        "debug": "2.2.0",
+        "rethinkdbdash": "~2.2.0"
     }
 }
