--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
         "rethinkdb": "^2.2.0",
         "body-parser": "~1.0.1",
         "debug": "2.2.0",
-        "rethinkdbdash": "~2.2.0"
+        "rethinkdbdash": "~2.2.0",
+        "socket.io": "~1.4.4",
+        "request-promise": "~2.0.0",
+        "lodash": "~4.0.1"
+    },
+    "devDependencies": {
+      "mocha": "~2.3.4",
+      "gulp": "~3.9.0",
+      "gulp-mocha": "~2.2.0",
+      "gulp-util": "~3.0.7"
     }
 }
