--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "mocha": "~2.3.4",
       "gulp": "~3.9.0",
       "gulp-mocha": "~2.2.0",
-      "gulp-util": "~3.0.7"
+      "gulp-util": "~3.0.7",
+      "chai": "~2.2.0"
     }
 }
