--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "rethinkdbdash": "~2.2.0",
         "socket.io": "~1.4.4",
         "request-promise": "~2.0.0",
-        "lodash": "~4.0.1"
+        "lodash": "~4.0.1",
+        "config": "~1.19.0"
     },
     "devDependencies": {
       "mocha": "~2.3.4",
